# ca-school-explorer

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  LICENSE  METHODOLOGY.md  Makefile  README.md  ROADMAP.md  SECURITY.md  compose.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.worker.json  worker-configuration.d.ts  wrangler.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_issue.yml  feature_request.yml
.github/workflows/: ci.yml
apps/web/: eslint.config.js  index.html  package.json
config/: sources.toml
config/datasets/: cde_academic_indicator_ela_2022_23.toml  cde_academic_indicator_ela_2023_24.toml  cde_academic_indicator_ela_2024_25.toml  cde_academic_indicator_math_2022_23.toml  cde_academic_indicator_math_2023_24.toml  cde_academic_indicator_math_2024_25.toml  cde_acgr_2022_23.toml  cde_acgr_2023_24.toml  cde_acgr_2024_25.toml  cde_cci_2022_23.toml  cde_cci_2023_24.toml  cde_cci_2024_25.toml  cde_chronic_absenteeism_2022_23.toml  (+13 more)
docs/: architecture.md  build-week.md  ca-school-explorer-plan.artifact.json  ca-school-explorer-plan.html  cloudflare-workers.md  database.md  demo-video-script.md  next-phase-plan.md
tests/: sample_dataset.py  test_catalog.py  test_chronic_absenteeism.py  test_database_integration.py  test_dataset_manifest.py  test_indicators.py  test_public_data.py  test_school_directory.py  test_school_resources.py
worker/: district-boundaries.ts  geocode.ts  index.test.ts  index.ts
(+1106 files in other folders)
