[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ca-school-explorer"
version = "0.3.0"
description = "Open data tools for trustworthy California school comparison and trend analysis."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "California School Explorer contributors" },
]
keywords = ["california", "education", "open-data", "schools"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
ca-school-explorer = "ca_school_explorer.cli:main"

[project.urls]
Homepage = "https://github.com/bianrui0315/ca-school-explorer"
Issues = "https://github.com/bianrui0315/ca-school-explorer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ca_school_explorer"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ca_school_explorer"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
